--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -10,11 +10,11 @@
 
     color: $accent-color;
 
-    &--header {
+    &__header {
     color: $black-color;
     }
 
-    &--footer {
+    &__footer {
     color: $secondary-color;
     }
 }
