--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,8 @@
 @import './utils/variables';
 @import './utils/tags';
 @import './utils/utilities';
-@import './components/logo';  
+@import './components/logo';
+@import './components/networks';  
 @import './components/header';
 @import './components/hero';
 @import './components/description';
