--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -36,7 +36,7 @@
     background-color: $secondary-color;
 }
 
-.modal--hidden-btn {
+.modal__hidden-btn {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -50,7 +50,7 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.modal--btn-icon {
+.modal__btn-icon {
     width: 18px;
     height: 18px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -61,13 +61,13 @@
     }
 }
 
-.modal--group {
+.modal__group {
     padding: 40px;
 
     text-align: center;
 }
 
-.modal--title {
+.modal__title {
     margin-bottom: 12px;
 
     font-size: 20px;
@@ -75,11 +75,11 @@
     letter-spacing: 0.03em;
 }
 
-.modal--item {
+.modal__item {
     margin-bottom: 10px;
 }
 
-.modal--field {
+.modal__field {
     position: relative;
 
     display: flex;
@@ -93,7 +93,7 @@
     color: $grey-color;
 }
 
-.modal--field>input {
+.modal__field>input {
     margin-top: 4px;
     padding: 12px 42px;
     
@@ -109,23 +109,23 @@
 
 
 
-.modal--field>svg {
+.modal__field>svg {
     position: absolute;
     left: 12px;
     bottom: 11px;
 }
 
-.modal--field>input:focus-within+svg {
+.modal__field>input:focus-within+svg {
     fill: $accent-color;
 }
 
-.modal--textarea {
+.modal__textarea {
     margin-bottom: 20px;
 
     text-align: left;
 }
 
-.modal--textarea-label {
+.modal__textarea-label {
     display: flex;
     flex-direction: column;
 
@@ -136,7 +136,7 @@
     color: $grey-color;
 }
 
-.modal--textarea-label>textarea {
+.modal__textarea-label>textarea {
     margin-top: 4px;
     padding: 12px 16px;
 
@@ -154,17 +154,17 @@
     }
 }
 
-.modal--textarea-label:focus-within>textarea,
-.modal--textarea-label:focus-visible>textarea {
+.modal__textarea-label:focus-within>textarea,
+.modal__textarea-label:focus-visible>textarea {
     border: 1px solid $accent-color;
     outline-style: none;
 }
 
-.modal--checkbox {
+.modal__checkbox {
     margin-bottom: 30px;
 }
 
-.modal--checkbox label {
+.modal__checkbox label {
     font-size: 14px;
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
@@ -172,7 +172,7 @@
     color: $grey-color;
 }
 
-.modal--checkbox svg {
+.modal__checkbox svg {
     position: relative;
     bottom: -3px;
 
@@ -183,20 +183,20 @@
     fill: transparent;
 }
 
-.modal--checkbox>label>input:checked+svg {
+.modal__checkbox>label>input:checked+svg {
     background-color: $accent-color;
     border-color: $accent-color;
     fill: $secondary-color;
 }
 
 
-.modal--checkbox a {
+.modal__checkbox a {
     text-underline-offset: 3px;
 
     color: $accent-color;
 }
 
-.modal--btn {
+.modal__btn {
     padding: 10px 52px;
 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
