--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,41 +1,43 @@
-.clients--title {
-    margin-bottom: 50px;
-
-    font-size: 36px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    text-align: center;
-}
-
-.clients--list {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 30px;
-}
-
-.clients--icon {
-    transition: border-color 250ms, color 250ms $timing-function;
-
-    display: block;
-    width: 170px;
-    height: 92px;
-
-    border: 1px solid $icon-color;
-    border-radius: 4px;
-    color: $icon-color;
-
-    &:hover,
-    &:focus {
-        border-color: #2196F3;
-        color: #2196F3;
+.clients {
+    &__title {
+        margin-bottom: 50px;
+    
+        font-size: 36px;
+        line-height: 1.16;
+        letter-spacing: 0.03em;
+        text-align: center;
     }
-}
 
-.clients--svg {
-    margin: 16px 32px;
-    width: 106px;
-    height: 60px;
+    &__list {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
 
-    fill: currentColor;
+    &__icon {
+        transition: border-color 250ms, color 250ms $timing-function;
+    
+        display: block;
+        width: 170px;
+        height: 92px;
+    
+        border: 1px solid $icon-color;
+        border-radius: 4px;
+        color: $icon-color;
+    
+        &:hover,
+        &:focus {
+            border-color: #2196F3;
+            color: #2196F3;
+        }
+    }
+
+    &__svg {
+        margin: 16px 32px;
+        width: 106px;
+        height: 60px;
+    
+        fill: currentColor;
+    }
 }
