--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,33 +8,33 @@
     background-size: cover;
     background-position: center;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/studio/hero.jpg');
-}
 
-.hero--title {
-    margin: 0 auto 30px;
-    width: 696px;
-    height: 120px;
+    &__title {
+        margin: 0 auto 30px;
+        width: 696px;
+        height: 120px;
+    
+        font-weight: 900;
+        font-size: 44px;
+        line-height: 1.36;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+    
+        color: $secondary-color;
+    }
 
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-
-    color: $secondary-color;
-}
-
-.hero--btn {
-    padding: 10px 32px;
-
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-
-    background-color: $accent-color;
-    color: $secondary-color;
+    &__btn {
+        padding: 10px 32px;
+    
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border: none;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.87;
+        letter-spacing: 0.06em;
+    
+        background-color: $accent-color;
+        color: $secondary-color;
+    }
 }
