--- a/sass/components/_occupation.scss
+++ b/sass/components/_occupation.scss
@@ -1,49 +1,49 @@
 .occupation {
     background-color: $secondary-color;
-}
 
-.occupation--title {
-    margin-bottom: 50px;
+    &__title {
+        margin-bottom: 50px;
+    
+        font-size: 36px;
+        line-height: 1.17;
+        text-align: center;
+        letter-spacing: 0.03em;
+    }
 
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: 0.03em;
-}
+    &__list {
+        display: flex;
+        gap: 30px;
+        flex-wrap: wrap;
+    }
 
-.occupation--list {
-    display: flex;
-    gap: 30px;
-    flex-wrap: wrap;
-}
+    &__item {
+        position: relative;
+    }
 
-.occupation--item {
-    position: relative;
-}
+    &__img {
+        display: block;
+    }
 
-.occupation--img {
-    display: block;
-}
+    &__lining {
+        position: absolute;
+        bottom: 0;
+    
+        width: 370px;
+        height: 70px;
+    
+        background-color: rgba(47, 48, 58, 0.8);
+    }
 
-.occupation--lining {
-    position: absolute;
-    bottom: 0;
-
-    width: 370px;
-    height: 70px;
-
-    background-color: rgba(47, 48, 58, 0.8);
-}
-
-.occupation--name {
-    padding-top: 27px;
-    padding-bottom: 27px;
-
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-
-    color: $secondary-color;
+    &__name {
+        padding-top: 27px;
+        padding-bottom: 27px;
+    
+        font-size: 14px;
+        line-height: 1.14;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    
+        color: $secondary-color;
+    }
 }
