--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -5,17 +5,17 @@
     background-color: $secondary-color;
 }
 
-.portfolio--names {
+.portfolio__names {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
 }
 
-.portfolio--elment+.portfolio--elment {
+.portfolio__elment+.portfolio__elment {
     margin-left: 8px;
 }
 
-.portfolio--btn {
+.portfolio__btn {
     transition: background-color 250ms, color 250ms, box-shadow 250ms, border-radius 250ms $timing-function;
 
     padding: 6px 25px;
@@ -42,12 +42,12 @@
 
 /* Portfolio card */
 
-.portfolio--list {
+.portfolio__list {
     display: flex;
     flex-wrap: wrap;
 }
 
-.portfolio--item {
+.portfolio__item {
     transition: border 250ms, box-shadow 250ms $timing-function;
 
     width: 370px;
@@ -64,34 +64,34 @@
     }
 }
 
-.portfolio--item:nth-child(3n) {
+.portfolio__item:nth-child(3n) {
     margin-right: 0;
 }
 
-.portfolio--item:nth-last-child(-n + 3) {
+.portfolio__item:nth-last-child(-n + 3) {
     margin-bottom: 0;
 }
 
-.portfolio--link {
+.portfolio__link {
     text-decoration: none;
 }
 
-.portfolio--img {
+.portfolio__img {
     display: block;
 }
 
 /* Portfolio overlay */
 
-.portfolio--overlay {
+.portfolio__overlay {
     position: relative;
     overflow: hidden;
 }
 
-.portfolio--item:hover .portfolio--overlay-text {
+.portfolio__item:hover .portfolio__overlay-text {
     transform: translateY(0)
 }
 
-.portfolio--overlay-text {
+.portfolio__overlay-text {
     transition: transform 250ms $timing-function;
     position: absolute;
     transform: translateY(100%);
@@ -111,11 +111,11 @@
 
 /* Portfolio overlay over */
 
-.portfolio--item-text {
+.portfolio__item-text {
     padding: 24px 20px;
 }
 
-.portfolio--title {
+.portfolio__title {
     margin-bottom: 4px;
 
     font-size: 18px;
@@ -125,7 +125,7 @@
     color: $primary-color;
 }
 
-.portfolio--text {
+.portfolio__text {
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
